--- a/SpringSecurity/src/main/resources/application.properties
+++ b/SpringSecurity/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:learn_DB
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
-
-##jdbc:h2:mem:learn_DB , http://localhost:8080/h2-console/
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/learning
+spring.datasource.username = root
+spring.datasource.password = thinesh
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+server.port=8080
